View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032389 | Open CASCADE | OCCT:Visualization | public | 2021-05-24 16:41 | 2021-07-03 14:45 |
Reporter | osa | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032389: Visualization, AIS_Axis - simple ray creation and displaying | ||||
Description | Add possibility to create axis by gp_Ax1 and display it as ray (infinite to only one direction). Also it should be useful to set required visualization parameters to it. Now it is necessary to create such axis using Geom_Axis2Placement, make it infinite on application site and use workaround to update axis length: Handle(AIS_Axis) anAISAxis = new AIS_Axis (anAx2Axis, AIS_TOAX_ZAxis); Standard_Real aLength = UnitsAPI::AnyToLS (250000., "mm"); anAxisDrawer->DatumAspect()->SetAxisLength (aLength, aLength, aLength); anAISAxis->SetAxis2Placement (anAx2Axis, AIS_TOAX_ZAxis); // This is workaround to update axis length | ||||
Steps To Reproduce | vselect/axis/A1 | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32389 has been created by osa. SHA-1: b616f5097f2bc32e4753dd0885e50b2cebb9f2df Detailed log of new commits: Author: osa Date: Tue May 25 17:57:48 2021 +0300 0032388: Visualization - provide ray-picking interface with zero tolerance for rectangular frustum |
|
Branch CR32389 has been deleted by osa. SHA-1: b616f5097f2bc32e4753dd0885e50b2cebb9f2df |
|
Analysis, Solution evaluation |
|
Solution evaluation |
|
Branch CR32389 has been created by mkrylova. SHA-1: d984d517708a6dd6ebc2bb666e841f59deefaba5 Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
Solution evaluation, Testing |
|
http://jenkins-test-occt.nnov.opencascade.com/view/CR32389-master-MKRYLOVA/view/ALL/ (perf fclasses progr_par is unstable) |
|
Patch is ready to review: - OCCT: CR32389 |
|
Branch CR32389 has been updated by mkrylova. SHA-1: 2bf96084c1e454e166f68aa68b952eb239a340e3 Detailed log of new commits: Author: mkrylova Date: Thu Jun 17 12:22:57 2021 +0300 #kgv remarks |
|
Branch CR32389_1 has been created by mkrylova. SHA-1: c3682174b2fe91bcece9f556a7c06ead1c665275 Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
Testing |
|
Solution implementation, Testing |
|
Branch CR32389_1 has been updated forcibly by mkrylova. SHA-1: 9e5bf58bf5f74d7ad79465bf6593e8cd1ce6e8cc |
|
Branch CR32389_2 has been created by mkrylova. SHA-1: 7947c469da7022f705bda37c16379f2add98ee42 Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
Testing |
|
Branch CR32389_2 has been updated by mkrylova. SHA-1: bbce36859051812970fb3b0689c8295d8906dbcd Detailed log of new commits: Author: mkrylova Date: Thu Jun 24 12:27:51 2021 +0300 # undo changes to test fixes |
|
Branch CR32389_3 has been created by mkrylova. SHA-1: 7922dd2c4fde0e63e08efb5219945e765a4eb8b0 Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
http://jenkins-test-occt.nnov.opencascade.com/view/CR32389_3-master-MKRYLOVA/view/ALL/ |
|
Patch is ready to review: - OCCT: CR32389_3 |
|
Branch CR32389_3 has been updated by mkrylova. SHA-1: 76001993df789e6ddaf987615692535984dd03b6 Detailed log of new commits: Author: mkrylova Date: Thu Jun 24 18:02:56 2021 +0300 # kgv remarks |
|
Branch CR32389_4 has been created by mkrylova. SHA-1: 9c0922c8547f817a4b03832cf004de694f729e3b Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
Solution Implementation, Testing |
|
http://jenkins-test-occt.nnov.opencascade.com/view/CR32389_4-master-MKRYLOVA/view/ALL/ |
|
Patch is ready to review: - OCCT: CR32389_4 |
|
Branch CR32389_4 has been updated forcibly by mkrylova. SHA-1: 6bcda4c32abce860f51e0f958a2a3d24cee3f610 |
|
Branch CR32389_5 has been created by mkrylova. SHA-1: d7aacfd1291654303dc20526493728a57b148c31 Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
http://jenkins-test-occt.nnov.opencascade.com/view/CR32389_5-master-MKRYLOVA/view/ALL/ |
|
Patch is ready to review: - OCCT: CR32389_5 |
|
Solution Implementation, Testing |
|
Branch CR32389_5 has been updated by mkrylova. SHA-1: 33bfe7d570cd1fed33b84e0d44187f013cae8d9a Detailed log of new commits: Author: mkrylova Date: Tue Jun 29 12:34:44 2021 +0300 # osa remarks - fixed error message and constructor description |
|
Branch CR32389_6 has been created by mkrylova. SHA-1: 14b9b2eb4543de902a83931e071db40f69c1704b Detailed log of new commits: Author: mkrylova Date: Wed Jun 16 16:21:17 2021 +0300 0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
|
Solution Implementation, Testing |
|
http://jenkins-test-occt.nnov.opencascade.com/view/CR32389_6-master-MKRYLOVA/view/ALL/ |
|
Patch is ready to review: - OCCT: CR32389_6 |
|
Combination - OCCT branch : IR-2021-07-02 master SHA - 1f3c5058f27ddcbc23af3b05820e4433bb1009db a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-07-02 SHA - a0de44eb21bec792a53984d50cb770f6679dbbd8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17426.490000000336 / 17457.450000000455 [-0.18%] Products Total CPU difference: 11521.170000000124 / 11511.540000000101 [+0.08%] Windows-64-VC14: OCCT Total CPU difference: 19263.921875 / 19236.96875 [+0.14%] Products Total CPU difference: 12854.34375 / 12832.328125 [+0.17%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32389 has been deleted by mnt. SHA-1: 2bf96084c1e454e166f68aa68b952eb239a340e3 |
|
Branch CR32389_1 has been deleted by mnt. SHA-1: 9e5bf58bf5f74d7ad79465bf6593e8cd1ce6e8cc |
|
Branch CR32389_2 has been deleted by mnt. SHA-1: bbce36859051812970fb3b0689c8295d8906dbcd |
|
Branch CR32389_3 has been deleted by mnt. SHA-1: 76001993df789e6ddaf987615692535984dd03b6 |
|
Branch CR32389_4 has been deleted by mnt. SHA-1: 6bcda4c32abce860f51e0f958a2a3d24cee3f610 |
|
Branch CR32389_5 has been deleted by mnt. SHA-1: 33bfe7d570cd1fed33b84e0d44187f013cae8d9a |
|
Branch CR32389_6 has been deleted by mnt. SHA-1: 14b9b2eb4543de902a83931e071db40f69c1704b |
occt: master 1f3c5058 2021-06-16 13:21:17 Committer: bugmaster Details Diff |
0032389: Visualization, AIS_Axis - simple ray creation and displaying - Added constructor to create axis by gp_Ax1 - Added possibility to display axis as ray - Added function SetDisplayAspect to set required visualization parameters |
Affected Issues 0032389 |
|
mod - src/AIS/AIS_Axis.cxx | Diff File | ||
mod - src/AIS/AIS_Axis.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-05-24 16:41 | osa | New Issue | |
2021-05-24 16:41 | osa | Assigned To | => kgv |
2021-05-24 16:47 | osa | Assigned To | kgv => mkrylova |
2021-05-24 16:47 | osa | Status | new => assigned |
2021-05-24 16:48 | osa | Relationship added | related to 0032338 |
2021-05-25 17:57 | git | Note Added: 0101358 | |
2021-05-25 17:58 | git | Note Added: 0101360 | |
2021-06-04 17:22 | mkrylova | Note Added: 0101614 | |
2021-06-07 17:41 | mkrylova | Note Added: 0101670 | |
2021-06-16 16:39 | git | Note Added: 0101871 | |
2021-06-16 18:30 | mkrylova | Note Added: 0101874 | |
2021-06-17 11:32 | mkrylova | Note Added: 0101886 | |
2021-06-17 11:32 | mkrylova | Note Added: 0101887 | |
2021-06-17 12:22 | git | Note Added: 0101891 | |
2021-06-17 12:23 | git | Note Added: 0101892 | |
2021-06-17 19:21 | mkrylova | Note Added: 0101902 | |
2021-06-18 18:21 | mkrylova | Note Added: 0101920 | |
2021-06-21 13:00 | git | Note Added: 0101954 | |
2021-06-21 13:02 | git | Note Added: 0101955 | |
2021-06-21 18:54 | mkrylova | Note Added: 0101973 | |
2021-06-24 12:27 | git | Note Added: 0102025 | |
2021-06-24 12:28 | git | Note Added: 0102026 | |
2021-06-24 16:19 | mkrylova | Note Added: 0102032 | |
2021-06-24 16:20 | mkrylova | Note Added: 0102033 | |
2021-06-24 16:21 | mkrylova | Assigned To | mkrylova => osa |
2021-06-24 16:21 | mkrylova | Status | assigned => resolved |
2021-06-24 16:21 | mkrylova | Steps to Reproduce Updated | |
2021-06-24 18:02 | git | Note Added: 0102037 | |
2021-06-24 18:04 | git | Note Added: 0102038 | |
2021-06-24 18:08 | mkrylova | Note Added: 0102040 | |
2021-06-25 10:45 | mkrylova | Note Added: 0102047 | |
2021-06-25 10:45 | mkrylova | Note Added: 0102048 | |
2021-06-28 14:38 | git | Note Added: 0102115 | |
2021-06-28 14:39 | git | Note Added: 0102116 | |
2021-06-28 18:06 | mkrylova | Note Added: 0102124 | |
2021-06-28 18:06 | mkrylova | Note Added: 0102125 | |
2021-06-28 18:32 | mkrylova | Note Added: 0102130 | |
2021-06-29 11:42 | osa | Assigned To | osa => mkrylova |
2021-06-29 11:42 | osa | Status | resolved => assigned |
2021-06-29 12:34 | git | Note Added: 0102148 | |
2021-06-29 12:36 | git | Note Added: 0102149 | |
2021-06-29 17:58 | mkrylova | Note Added: 0102167 | |
2021-06-30 12:35 | mkrylova | Note Added: 0102179 | |
2021-06-30 12:36 | mkrylova | Note Added: 0102180 | |
2021-06-30 12:36 | mkrylova | Assigned To | mkrylova => osa |
2021-06-30 12:36 | mkrylova | Status | assigned => resolved |
2021-06-30 14:06 | osa | Assigned To | osa => bugmaster |
2021-06-30 14:06 | osa | Status | resolved => reviewed |
2021-07-03 11:08 | bugmaster | Note Added: 0102243 | |
2021-07-03 11:08 | bugmaster | Status | reviewed => tested |
2021-07-03 11:11 | bugmaster | Test case number | => Not required |
2021-07-03 11:14 | bugmaster | Changeset attached | => occt master 1f3c5058 |
2021-07-03 11:14 | bugmaster | Status | tested => verified |
2021-07-03 11:14 | bugmaster | Resolution | open => fixed |
2021-07-03 14:45 | git | Note Added: 0102251 | |
2021-07-03 14:45 | git | Note Added: 0102252 | |
2021-07-03 14:45 | git | Note Added: 0102253 | |
2021-07-03 14:45 | git | Note Added: 0102254 | |
2021-07-03 14:45 | git | Note Added: 0102255 | |
2021-07-03 14:45 | git | Note Added: 0102256 | |
2021-07-03 14:45 | git | Note Added: 0102257 |